--- a/rakefile
+++ b/rakefile
@@ -2,4 +2,8 @@ require 'rake/testtask'
 
 Rake::TestTask.new do |t|
   t.pattern = "tests/*_tests.rb"
+  t.warning = true
 end
+
+desc "Run tests"
+task :default => :test
